tests/rosetta/out/Smalltalk/arithmetic-integer-2.out
Object: '12345678' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (/tmp/arithmetic-integer-2.st:6)
UndefinedObject>>executeStatements (/tmp/arithmetic-integer-2.st:11)
