tests/rosetta/out/Smalltalk/arithmetic-integer-2.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a b main |
main := [ | a := 12345678.
b := 98765.
Transcript show: ((((((a asString) + ' + ') + (b asString)) + ' = ') + ((a + b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' - ') + (b asString)) + ' = ') + ((a - b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' * ') + (b asString)) + ' = ') + ((a * b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' quo ') + (b asString)) + ' = ') + ((a / b) asInteger asString))) printString; cr.
Transcript show: ((((((a asString) + ' rem ') + (b asString)) + ' = ') + ((a % b) asString))) printString; cr. ].
main value.
